src/page/error/error-404/error-404-complete/example/index.ejs
<%
const sample = getSample(include);
%>

<%- sample('', './sample/error-404-complete', { contact: true }, true, '../../../example/layout', { search: true }); %>
